# qkv_rs

./: .gitignore  Cargo.toml  LICENSE  README.md  test.sh
python/: pyproject.toml
python/tests/: test_basic.py
rust/: Cargo.toml
rust/src/: base_types.rs  lib.rs  logical.rs  main.rs  opcode.rs  physical.rs
rust/src/ops/: attention.rs  basic.rs  dense.rs  mod.rs  norm.rs  position_embed.rs  transformer.rs
rust/src/ops/basic/: broadcast.rs  inputs.rs  math.rs  mod.rs  slice.rs
rust/src/ops/nn/: activations.rs  attention.rs  dense.rs  mod.rs  norm.rs  position_embed.rs  transformer.rs
src/: base_types.rs  main.rs
src/ops/: attention.rs  basic.rs  dense.rs  norm.rs  position_embed.rs  transformer.rs
